# game

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: main.rs  mouse_controls_camera.rs
wasm/: index.html
