[package]
name = "isotest"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.14.2"
bevy_asset_loader = "0.21.0"
bevy_fast_tilemap = { git = "https://github.com/Droggelbecher/bevy-fast-tilemap.git" }
rand = "0.8.5"

[dev-dependencies]
bevy-inspector-egui = { version = "0.25.2", default-features = false }
